# emeltec3

./: .dga_res_2170.txt  .dockerignore  .env  .env.example  .gitattributes  .gitignore  .prettierignore  AGENTS.md  CLAUDE.md  PRODUCT.md  README.md  docker-compose.yml  historico_dga_OB-0601-292.csv  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  security_audit_emeltec.xlsx  skills-lock.json  ~$security_audit_emeltec.xlsx
.atl/: skill-registry.md
.claude/: settings.local.json
auth-api/: .env  .env.example  ARCHITECTURE.md  Dockerfile  eslint.config.js  package.json
dga-api/: .env.example  Dockerfile  eslint.config.js  package-lock.json  package.json  tsconfig.json
docs/: ARQUITECTURA-FLUJO-DATOS.html  ARQUITECTURA-FLUJO-DATOS.md  EIPD-EVALUACION.md  ENCARGADOS-TRATAMIENTO.md  GOBERNANZA-DATOS.md  IMPACTO-LEY-CLOUD.md  IMPACTO-LEY-EMPRESA.md  LEY-21719-SEGURIDAD.md  PLAN-MEJORAS.md  POLITICA-SEGURIDAD.md  README.md  RESPUESTA-BRECHAS.md  RETENCION-DATOS.md  SUPRESION-DATOS.md  backend-audit-2026-06.md  contadores-delta-algorithm.md  csvconsumer-runbook.md  deployment.md  dga-gcs-exporter.md  dga-reporte-proceso.md  dga-sensor-defectuoso.md  dga-smoke-tests.md  ftp-pipeline.md  mathei-simulation-worker.md  optimizaciones-2026-05.md  testing.md
frontend-angular/: .gitignore  Dockerfile  README.md  angular.json  eslint.config.js  nginx-security-headers.conf  nginx.conf  package-lock.json  package.json  proxy.conf.json  proxy.conf.local.json  proxy.production.conf.json  scope-emeltec.html  skills-lock.json  tsconfig.app.json  tsconfig.json  vitest.config.ts
ftp-pipeline/: filter-ftp-month.ps1  ftpconsumer-rust.Dockerfile  split-ftp-csv.ps1
fts-pipeline/: ftsconsumer-rust.Dockerfile
fts-pipeline/ftsconsumer-rust/: .env.example  Cargo.toml  README.md  build.rs
fts-pipeline/ftsconsumer-rust/src/: main.rs
grpc-pipeline/: README.md  csvconsumer-rust.Dockerfile  go.mod  go.sum  organize_w20.ps1
grpc-pipeline/csvconsumer-rust/: ARCHITECTURE.md  Cargo.toml  build.rs
grpc-pipeline/csvconsumer-rust/src/: main.rs
infra-db/: README.md  docker-compose.yml
infra-nginx/: emeltec-sites.conf
landing-emeltec/: .dockerignore  Dockerfile  README.md  index.html  nginx.conf  robots.txt  script.js  serve-local.js  sitemap.xml  styles.css
linux-db-api/: Cargo.toml  Dockerfile  README.md
linux-db-api/src/: main.rs
main-api/: .dockerignore  .env  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  docker-compose.yml  eslint.config.js  gen-parquet-sample.cjs  package-lock.json  package.json  preview-email-admin.html  preview-email-alert.html  preview-email-digest-event.html  preview-email-digest-issues.html  preview-email-digest-ok.html  preview-email-welcome.html  preview-gen-digest.js  tsconfig.json  tsconfig.test.json  vitest.config.ts
metrics-page/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json
scripts/: backup-db.sh  code-review-sheet.mjs  db-migrations.sql  deploy-production.sh  seed.js  (+4 more)
(+618 files in other folders)
