[package]
name = "csvconsumer"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.12"
prost = "0.13"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tokio-postgres = "0.7"
dotenvy = "0.15"

[build-dependencies]
tonic-build = "0.12"

[[bin]]
name = "csvconsumer"
path = "src/main.rs"
